--- a/RGBConvert/JPSDR_RGBConvert.rc
+++ b/RGBConvert/JPSDR_RGBConvert.rc
@@ -71,20 +71,26 @@ END
 // Dialog
 //
 
-IDD_JPSDR_RGBCONVERT DIALOGEX 0, 0, 153, 80
+IDD_JPSDR_RGBCONVERT DIALOGEX 0, 0, 204, 80
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "JPSDR - RGBConvert"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,93,10,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,93,30,50,14
-    PUSHBUTTON      "Show Preview",IDC_PREVIEW,93,60,50,14
+    DEFPUSHBUTTON   "OK",IDOK,144,10,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,144,30,50,14
+    PUSHBUTTON      "Show Preview",IDC_PREVIEW,144,60,50,14
     CONTROL         "Full Range YCbCr",IDC_FULL_RANGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,65,70,11
+	CONTROL         "Autodetect",IDC_AUTODETECT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,65,50,11
     GROUPBOX        "Color Matrix",IDC_MATRIX_GROUP,7,7,70,57,WS_GROUP
     CONTROL         "BT.709",IDC_BT709,"Button",BS_AUTORADIOBUTTON,13,16,45,10
     CONTROL         "BT.601",IDC_BT601,"Button",BS_AUTORADIOBUTTON,13,27,45,10
     CONTROL         "SMPTE 204M",IDC_SMPTE_240M,"Button",BS_AUTORADIOBUTTON,13,38,60,10
     CONTROL         "FCC",IDC_FCC,"Button",BS_AUTORADIOBUTTON,13,49,45,10
+    GROUPBOX        "Output",IDC_OUTPUT_GROUP,83,7,45,57,WS_GROUP
+    CONTROL         "YV24",IDC_OUTPUT_YV24,"Button",BS_AUTORADIOBUTTON,89,16,35,10
+    CONTROL         "YV16",IDC_OUTPUT_YV16,"Button",BS_AUTORADIOBUTTON,89,27,35,10
+    CONTROL         "YUY2",IDC_OUTPUT_YUY2,"Button",BS_AUTORADIOBUTTON,89,38,35,10
+    CONTROL         "YV12",IDC_OUTPUT_YV12,"Button",BS_AUTORADIOBUTTON,89,49,35,10
 END
 
 #endif    // Français (France) resources
