Add multi-threading on several filters, and a few small fixes.
Signed-off-by: jpsdr <jpsdr.psx@free.fr>

--- a/ColorSpaceConvert/JPSDR_ColorSpaceConvert.rc
+++ b/ColorSpaceConvert/JPSDR_ColorSpaceConvert.rc
@@ -79,6 +79,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,170,10,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,170,30,50,14
     PUSHBUTTON      "Show Preview",IDC_PREVIEW,170,60,50,14
+	CONTROL         "Enable MT",IDC_ENABLE_MT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,170,47,56,12
     CONTROL         "Full Range YCbCr",IDC_FULL_RANGE_IN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,65,70,11
     GROUPBOX        "Input",IDC_MATRIX_GROUP_IN,7,7,70,57,WS_GROUP
     CONTROL         "BT.709",IDC_BT709_IN,"Button",BS_AUTORADIOBUTTON,13,16,45,10
