--- a/Deinterlace/JPSDR_Deinterlace.rc
+++ b/Deinterlace/JPSDR_Deinterlace.rc
@@ -63,6 +63,7 @@ BEGIN
     EDITTEXT        IDC_FILENAME,103,24,157,15,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse",IDC_BROWSE,207,8,54,15
     CONTROL         "File mode",IDC_FILE_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,8,56,12
+	CONTROL         "Enable MT",IDC_ENABLE_MT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,43,56,12
     GROUPBOX        "Deinterlace mode",IDC_STATIC_MODE,10,7,90,62,WS_GROUP
     CONTROL         "Blend fields (Bilinear)",IDC_BLEND,"Button",BS_AUTORADIOBUTTON,15,16,83,13
     CONTROL         "Blend fields (Trilinear)",IDC_BLEND_TRI,"Button",BS_AUTORADIOBUTTON,15,28,83,13
