--- a/IVTC/JPSDR_IVTC.rc
+++ b/IVTC/JPSDR_IVTC.rc
@@ -47,6 +47,7 @@ BEGIN
     CONTROL         "Disable zero mode",IDC_Z_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,95,74,11
     CONTROL         "Disable motion map filtering",IDC_MOTION_MAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,82,109,11
     CONTROL         "Manual Mode",IDC_MANUAL_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,114,74,11
+	CONTROL         "Enable MT",IDC_ENABLE_MT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,215,82,45,11
     EDITTEXT        IDC_FILENAME,12,131,157,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse",IDC_BROWSE,112,112,58,15
     GROUPBOX        "Thresholds",IDC_IVTC_STATIC,116,2,90,59,WS_GROUP
