--- a/Median/JPSDR_Median.rc
+++ b/Median/JPSDR_Median.rc
@@ -50,6 +50,7 @@ BEGIN
     CONTROL         "Disable",IDC_DISABLE_0,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,39,39,10
     CONTROL         "Disable",IDC_DISABLE_1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,72,39,10
     CONTROL         "Disable",IDC_DISABLE_2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,105,39,10
+	CONTROL         "Enable MT",IDC_ENABLE_MT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,118,56,12
     GROUPBOX        "Filter mode",IDC_STATIC,129,7,62,59,WS_GROUP
     CONTROL         "Square",IDC_SQUARE,"Button",BS_AUTORADIOBUTTON,137,14,38,18
     CONTROL         "Horizontal",IDC_HORIZONTAL,"Button",BS_AUTORADIOBUTTON,137,30,48,18
