--- a/RGBConvert/JPSDR_RGBConvert.rc
+++ b/RGBConvert/JPSDR_RGBConvert.rc
@@ -79,6 +79,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,144,10,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,144,30,50,14
     PUSHBUTTON      "Show Preview",IDC_PREVIEW,144,60,50,14
+    CONTROL         "Enable MT",IDC_ENABLE_MT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,144,47,56,12	
     CONTROL         "Full Range YCbCr",IDC_FULL_RANGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,65,70,11
 	CONTROL         "Autodetect",IDC_AUTODETECT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,65,50,11
     GROUPBOX        "Color Matrix",IDC_MATRIX_GROUP,7,7,70,57,WS_GROUP
