--- a/AutoYUY2/JPSDR_AutoYUY2.rc
+++ b/AutoYUY2/JPSDR_AutoYUY2.rc
@@ -71,14 +71,15 @@ END
 // Dialog
 //
 
-IDD_JPSDR_AUTO_YUY2 DIALOGEX 0, 0, 164, 103
+IDD_JPSDR_AUTO_YUY2 DIALOGEX 0, 0, 164, 117
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "JPSDR - AutoYUY2"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,7,82,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,7,62,50,14
-    PUSHBUTTON      "Show Preview",IDC_PREVIEW,93,82,50,14
+    DEFPUSHBUTTON   "OK",IDOK,7,97,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,7,77,50,14
+    PUSHBUTTON      "Show Preview",IDC_PREVIEW,93,97,50,14
+    CONTROL         "Enable MT",IDC_ENABLE_MT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,58,45,11	
     EDITTEXT        IDC_THRESHOLD,93,63,24,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Threshold",IDC_THRESHOLD_TEXT,120,63,32,12,SS_CENTERIMAGE
     GROUPBOX        "Output format",IDC_MODE_GROUP,7,7,70,46,WS_GROUP
