--- a/Filtres_JPSDR/Filtres_JPSDR.vcxproj.filters
+++ b/Filtres_JPSDR/Filtres_JPSDR.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="ThreadPoolInterface.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="JPSDRVideoFilter.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <MASM Include="..\AddBorder\Filtre_JPSDR_AddBorder_asm.asm">
@@ -203,6 +206,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="ThreadPoolInterface.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="JPSDRVideoFilter.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
